<resources>
    <string name="app_name">Notepad</string>
    <string name="Title">Title</string>
    <string name="Body">Body</string>
    <string name="Account">Account</string>
    <string name="Delete">Delete</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="sign_out">sign out</string>
    <string name="Google">Google</string>
    <string name="img">img</string>

    <!--Templates-->
    <string name="selected_template">%1$d selected</string>
    <plurals name="Delete_Confirmation_Template">
        <item quantity="one">Are you sure you want to delete %1$d note</item>
        <item quantity="other">Are you sure you want to delete %1$d notes</item>
    </plurals>

    <!--Errors-->
    <string name="Required_Field_Empty_Error">required</string>
    <string name="GoogleSignIn_Network_Error">Network Error!! please check your network connection</string>
    <string name="GoogleSignIn_InvalidAccount_Error">Invalid Account!! account specified is not valid</string>
    <string name="GoogleSignIn_Other_Error">Oops!! something went wrong please try again\nError Code: %1$d - %2$s</string>
    <string name="GoogleSignIn_SignInCancelled_Error">You need to sign in with a Google account to use this app</string>

    <!--Placeholders-->
    <string name="Note_Title_Placeholder">Title</string>
    <string name="Note_Body_Placeholder">This is the body of a standard note. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="Account_Name_Placeholder">Account Name</string>
    <string name="Account_Email_Placeholder">accountemail@gmail.com</string>
    <string name="Delete_Confirmation_Placeholder">Are you sure you want to delete n notes</string>
</resources>