<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">
        <ImageView
            android:id="@+id/googleLogo"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_google_name"
            android:contentDescription="@string/Google"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/Account"
            app:tint="@android:color/holo_blue_dark"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/name"
            app:layout_constraintBottom_toBottomOf="@id/email"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Account_Name_Placeholder"
            android:textSize="18sp"
            android:textColor="@android:color/primary_text_light"
            app:layout_constraintTop_toBottomOf="@id/googleLogo"
            app:layout_constraintStart_toEndOf="@id/profileImage"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Account_Email_Placeholder"
            android:textSize="14sp"
            android:textColor="@android:color/tertiary_text_light"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/profileImage"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signOut"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_out"
            android:textAppearance="@style/DialogBtn_TextAppearance"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:padding="0dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/cancel"
            android:textAppearance="@style/DialogBtn_TextAppearance"
            app:layout_constraintTop_toTopOf="@id/signOut"
            app:layout_constraintBottom_toBottomOf="@id/signOut"
            app:layout_constraintEnd_toStartOf="@id/signOut"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</layout>