<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete"
            android:padding="5dp"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete_Confirmation_Placeholder"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="15sp"
            android:padding="5dp"
            android:maxWidth="250dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:id="@+id/delete"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="@color/danger"
            android:textAppearance="@style/DialogBtn_TextAppearance"
            style="@style/Widget.MaterialComponents.Button"
            app:layout_constraintTop_toBottomOf="@id/message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/cancel"
            android:textAppearance="@style/DialogBtn_TextAppearance"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintTop_toTopOf="@id/delete"
            app:layout_constraintBottom_toBottomOf="@id/delete"
            app:layout_constraintEnd_toStartOf="@id/delete"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</layout>