<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/iconsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="googleIcon,plusIcon,notepadIcon"
        app:barrierDirection="bottom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:id="@+id/googleIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_google"
        android:contentDescription="@string/Google"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/plusIcon"/>
    <ImageView
        android:id="@+id/plusIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_big_add"
        android:contentDescription="@string/img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/googleIcon"
        app:layout_constraintEnd_toStartOf="@id/notepadIcon"/>
    <ImageView
        android:id="@+id/notepadIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_notepad"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/plusIcon"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iconsBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/signInError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@id/signInBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>